# redline

./: README.md  docker-compose.yml  large_sample.txt  production.md  sample.txt
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bff6f4365aab_initial_migration.py
backend/app/: main.py
backend/app/core/: config.py  database.py  models.py
backend/app/routers/: changes.py  chunks.py  documents.py  occurrences.py  search.py  suggest.py
backend/app/schemas/: __init__.py  change.py  chunk.py  document.py  occurrences.py  search.py  suggest.py
backend/app/services/: changes.py  documents.py  exceptions.py  occurrences.py  search.py  suggest.py
backend/tests/: conftest.py  test_changes.py  test_documents.py  test_performance.py  test_search.py
frontend/: Dockerfile  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: DocumentList.jsx  DocumentView.jsx
